--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "html-webpack-plugin": "^2.16.1",
     "node-sass": "^3.5.3",
     "react": "^15.0.1",
+    "react-cookie": "^0.4.6",
     "react-document-title": "^2.0.1",
     "react-dom": "^15.0.1",
     "react-helmet": "^3.1.0",
     "react-router": "^2.4.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
     "whatwg-fetch": "^1.0.0"
