--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.16.1",
+    "moment": "^2.13.0",
     "node-sass": "^3.5.3",
     "react": "^15.0.1",
     "react-cookie": "^0.4.6",
+    "react-date-picker": "^5.0.9-alpha",
+    "react-datetime": "^2.2.1",
+    "react-day-picker": "^2.0.3",
     "react-document-title": "^2.0.1",
     "react-dom": "^15.0.1",
     "react-helmet": "^3.1.0",
